--- a/views/help.tt
+++ b/views/help.tt
@@ -29,8 +29,8 @@ Calculated fields can be used to automatically generate values based
 on other fields. Basic Perl programming style can be used, with the value that
 is returned being used for the value of the field. Values from other fields
 are used by inserting the field name between square brackets. Values in date
-ranges are used by adding the suffix ".from" or ".to" to specify the date
-required. For example:
+ranges are used by adding the suffix &quot;.from&quot; or &quot;.to&quot;
+to specify the date required. For example:
 
 <tt><pre>
 [% FILTER html %]
@@ -60,7 +60,9 @@ RAG fields can be used to automatically generate colour-coded indicators based
 on other fields. Basic Perl programming style can be used to stipulate the conditions
 for the colour. If none match, the field will be indicated as grey. Values from other
 fields are used by inserting the field name between square brackets, whilst
-&quot;CURDATE&quot; can be used to insert the current date. For example:
+&quot;CURDATE&quot; can be used to insert the current date. Values in date
+ranges are used by adding the suffix &quot;.from&quot; or &quot;.to&quot;
+to specify the date required. For example:
 
 <tt><pre>[% FILTER html %]
 [Start Date] > CURDATE
