--- a/views/data.tt
+++ b/views/data.tt
@@ -43,7 +43,7 @@
                     <a href="/view/[% v.id %]" class="btn btn-default" role="button">Customise view</a>
                 </div>
             [% END %]
-            [% IF user.permissions.create %]
+            [% IF user.permission.create %]
                 <div class="btn-group">
                     <a href="/edit/" class="btn btn-default" role="button">New entry</a>
                 </div>
