--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -60,14 +60,14 @@
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
                                 <li [% IF page=="data" %]class="active"[% END %]><a href="[% url.page %]/data">Data</a></li>
-                                [% IF user.permissions.approver %]
+                                [% IF user.permission.approver %]
                                     <li [% IF page=="approval" %]class="active"[% END %]><a href="[% url.page %]/approval/">Approval</a></li>
                                 [% END %]
-                                [% IF user.permissions.admin %]
+                                [% IF user.permission.admin %]
                                     <li [% IF page=="layout" %]class="active"[% END %]><a href="[% url.page %]/layout/">Layout</a></li>
                                     <li [% IF page=="graph" %]class="active"[% END %]><a href="[% url.page %]/graph/">Graphs</a></li>
                                 [% END %]
-                                [% IF user.permissions.admin %]
+                                [% IF user.permission.admin %]
                                     <li [% IF page=="user" %]class="active"[% END %]><a href="[% url.page %]/user/">Users</a></li>
                                 [% END %]
                             </ul>
