--- a/views/login.tt
+++ b/views/login.tt
@@ -17,7 +17,7 @@
                         <h2>Please Sign In</h2>
                         <hr>
                         <div class="form-group">
-                            <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email Address" value="[% username %]">
+                            <input type="email" name="username" id="email" class="form-control input-lg" placeholder="Email Address" value="[% username %]">
                         </div>
                         <div class="form-group">
                             <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password">
