--- a/views/record.tt
+++ b/views/record.tt
@@ -20,6 +20,9 @@
     [% IF user.permission.update %]
         <a href="/edit/[% record.current_id %]" class="btn btn-default" role="button">Edit</a>
     [% END %]
+    [% IF user.permission.delete || user.permission.delete_noneed_approval %]
+        <a href="" data-toggle="modal" data-target="#modaldelete" class="btn btn-default" role="button">Delete</a>
+    [% END %]
 </div>
 <p></p>
 <table class="table table-striped">
@@ -37,4 +40,28 @@
         </tr>
     [% END %]
 </table>
+
+[% IF user.permission.delete || user.permission.delete_noneed_approval %]
+   <!-- Modal -->
+    <div class="modal fade" id="modaldelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form role="form" method="post" enctype="multipart/form-data">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Delete record</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete this record? All previous versions will
+                        also be deleted.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="submit" value="[% record.current_id %]" class="btn btn-primary" name="delete">Delete</button>
+                </div>
+                </form>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+[% END %]
 
