--- a/views/edit.tt
+++ b/views/edit.tt
@@ -54,7 +54,12 @@
                         [% IF col.optional OR value.deleted OR NOT value %]
                             <option></option>
                         [% END %]
-                        [% FOREACH enumval IN col.enumvals %]
+                        [% IF col.ordering == "desc" %]
+                            [% enumvals = col.enumvals.sort('value').reverse %]
+                        [% ELSE %]
+                            [% enumvals = col.enumvals.sort('value') %]
+                        [% END %]
+                        [% FOREACH enumval IN enumvals %]
                             [% UNLESS enumval.deleted %]
                                 <option value="[% enumval.id %]" [% IF value == enumval.id %]selected[% END %]>
                                     [% enumval.value %]</option>
