Allow enumvals to be ordered as entered

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -56,8 +56,10 @@
                         [% END %]
                         [% IF col.ordering == "desc" %]
                             [% enumvals = col.enumvals.sort('value').reverse %]
-                        [% ELSE %]
+                        [% ELSIF col.ordering == "asc" %]
                             [% enumvals = col.enumvals.sort('value') %]
+                        [% ELSE %]
+                            [% enumvals = col.enumvals %]
                         [% END %]
                         [% FOREACH enumval IN enumvals %]
                             [% UNLESS enumval.deleted %]
