Add cancel button to edit page

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -138,6 +138,7 @@
             Submit
         [% END %]
     </button>
+    <a href="/data" class="btn btn-default">Cancel</a>
 </form>
 <p></p>
 
