--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -116,10 +116,13 @@
         <!-- Placed at the end of the document so the pages load faster -->
         [% IF hostlocal %]
             <script src="[% url.js %]/jquery-1.10.2.min.js"></script>
+            <script src="[% url.js %]/bootstrap.min.js"></script>
+            <script src="[% url.js %]/tooltip.min.js"></script>
         [% ELSE %]
             <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+            <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+            <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/tooltip.min.js"></script>
         [% END %]
-        <script src="[% url.js %]/bootstrap.min.js"></script>
         [% IF page == "edit" OR page == "approval" %]
             <script type="text/javascript" src="[% url.js %]/bootstrap-datepicker.js"></script>
             <script type="text/javascript">
@@ -149,6 +152,7 @@
             <script type="text/javascript" src="[% url.js %]/calendar.min.js"></script>
         [% END %]
         <script type="text/javascript">
+            $('.personpop').popover({placement:'auto', html:true});
             if (typeof jscode != 'undefined') {
                 eval(jscode);
             }
