Load correct help text when opening second help box

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -176,6 +176,9 @@
 <script type="text/javascript">
     var jscode='[% FILTER remove('\n+') %]
         [% FILTER replace('\'', '\\\'') %]
+        $(document).on('hidden.bs.modal', function (e) {
+            $(e.target).removeData('bs.modal');
+        });
         [% INCLUDE tree.tt %]
 [% END %]
 [% END %]';
