--- a/views/view.tt
+++ b/views/view.tt
@@ -35,22 +35,22 @@
                 <dd>Views are used to display only certain items on the &quot;data&quot; page.
                     Views can be used to only display certain columns (by ticking the relevant
                     items on the left), or to only display some rows (using the filters below).
+                    Sort orders can also be configured.
                     <ul></ul>
                 </dd>
                 [% IF user.permission.layout %]
                     <dt>Global view</dt>
                     <dd>If the view is defined as a global view, then it will be visible as an 
-                        available view for all users. A view does not need to be global for it
-                        to be used for a graph.
+                        available view for all users.
                     </dd>
                     <ul></ul>
                 [% END %]
                 <dt>Filters</dt>
                 <dd>Filters can be used to selectively display only some rows of data. Several
                     filters can be applied to one view, in which case data will only be displayed
-                    that meets the criteria of all the filters. For example, 2 date filters can be used to
-                    only show data between 2 dates. Any dates entered must be specified in the
-                    form yyyy-mm-dd.
+                    that meets the configured criteria. Filters can be either logical AND or 
+                    logical OR, and be grouped at different levels for maximum flexibility.
+                    Any dates entered must be specified in the form yyyy-mm-dd.
                 </dd>
             </dl>
 
